objects/ALTF__TeamView_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__TeamView_Team__c</fullName>
        <label>Foresight Team</label>
        <referenceTo>ALTF__TeamView_Team__c</referenceTo>
        <relationshipName>Foresight_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Foresight_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Altify TeamView Team Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify TeamView Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>